crates/syntax/src/parser/snapshots/mu_syntax__parser__tests__postfix_expr-2.snap
---
source: crates/syntax/src/parser/tests.rs
expression: module
---
Module {
    imports: [],
    body: [
        Expr(
            GetNamed(
                GetNamed {
                    target: GetKeyed(
                        GetKeyed {
                            target: GetNamed(
                                GetNamed {
                                    target: GetVar(
                                        GetVar {
                                            name: "a",
                                        },
                                    ),
                                    name: "b",
                                },
                            ),
                            key: GetVar(
                                GetVar {
                                    name: "c",
                                },
                            ),
                        },
                    ),
                    name: "d",
                },
            ),
        ),
        Expr(
            GetNamed(
                GetNamed {
                    target: GetKeyed(
                        GetKeyed {
                            target: GetNamed(
                                GetNamed {
                                    target: GetVar(
                                        GetVar {
                                            name: "a",
                                        },
                                    ),
                                    name: "b",
                                },
                            ),
                            key: GetVar(
                                GetVar {
                                    name: "c",
                                },
                            ),
                        },
                    ),
                    name: "d",
                },
            ),
        ),
    ],
}
