crates/syntax/src/parser/snapshots/mu_syntax__parser__tests__postfix_expr-5.snap
---
source: crates/syntax/src/parser/tests.rs
expression: errors
---
[31merror[0m: expected `identifier` while parsing field key
[34m>[0m code:1
[34m|[0m 
[34m|[0m a.[31;4m_[0m
[34m|[0m 


