crates/syntax/src/parser/snapshots/mu_syntax__parser__tests__postfix_expr.snap
---
source: crates/syntax/src/parser/tests.rs
expression: module
---
GetField(
    GetField {
        target: GetField(
            GetField {
                target: GetField(
                    GetField {
                        target: GetVar(
                            GetVar {
                                name: "a",
                            },
                        ),
                        key: Literal(
                            String(
                                "b",
                            ),
                        ),
                    },
                ),
                key: GetVar(
                    GetVar {
                        name: "c",
                    },
                ),
            },
        ),
        key: Literal(
            String(
                "d",
            ),
        ),
    },
)
