crates/syntax/src/parser/snapshots/mu_syntax__parser__tests__unary_expr-2.snap
---
source: crates/syntax/src/parser/tests.rs
expression: module
---
Unary(
    Unary {
        op: Not,
        right: GetVar(
            GetVar {
                name: "a",
            },
        ),
    },
)
