crates/syntax/src/parser/snapshots/mu_syntax__parser__tests__unary_expr-4.snap
---
source: crates/syntax/src/parser/tests.rs
expression: module
---
Unary(
    Unary {
        op: Opt,
        right: Call(
            Call {
                target: GetField(
                    GetField {
                        target: GetField(
                            GetField {
                                target: GetField(
                                    GetField {
                                        target: GetVar(
                                            GetVar {
                                                name: "a",
                                            },
                                        ),
                                        key: Literal(
                                            String(
                                                "b",
                                            ),
                                        ),
                                    },
                                ),
                                key: GetVar(
                                    GetVar {
                                        name: "c",
                                    },
                                ),
                            },
                        ),
                        key: Literal(
                            String(
                                "d",
                            ),
                        ),
                    },
                ),
                args: Args {
                    pos: [],
                    kw: [],
                },
            },
        ),
    },
)
