crates/syntax/src/parser/snapshots/mu_syntax__parser__tests__unary_expr.snap
---
source: crates/syntax/src/parser/tests.rs
expression: module
---
Unary(
    Unary {
        op: Minus,
        right: GetVar(
            GetVar {
                name: "a",
            },
        ),
    },
)
